# SpatialDE

./: README.ipynb  pyproject.toml
spatialde/: __init__.py  aeh.py  aha.py  anndata.py  base.py  plot.py  util.py
spatialde/scripts/: spatialde_cli.py
