[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "spatialde"
authors = [
    { name = "Valentine Svensson", email = "valentine@nxn.se" },
    { name = "Joshua Cook" },
]
classifiers = ["Private :: Do Not Upload"]
dynamic = ["version", "description"]
dependencies = [
    'Click',
    'NaiveDE >= 1.2.0',
    'numpy >= 1.26.0',
    'pandas >= 2.0.0',
    'scipy >= 1.12.0',
    'tqdm',
]

[project.optional-dependencies]
dev = ["constable", "mypy", "pandas-stubs", "pre-commit", "ruff"]


[project.scripts]
"spatialde" = "spatialde.scripts.spatialde_cli:main"


[project.urls]
Home = "https://github.com/jhrcook/SpatialDE"


[tool.ruff]
lint.select = [
    "E",   # pycodestyle
    "W",   # pycodestyle
    "F",   # pyflakes
    "UP",  # pyupgrade
    "D",   # pydocstyle
    "B",   # bugbear
    "I",   # isort
    "N",   # pep8-naming
    "TD",  # flake8-todos
    "FIX", # flake8-fixme
    "PD",  # pandas-vet
    "NPY", # NumPy-specific rules
    "RUF", # Ruff-specific rules
    "RET", # flake8-return
    "SLF", # flake8-self
    "ARG", # flake8-unused-arguments
]
lint.ignore = ["TD003"]
lint.pydocstyle = { convention = "google" }
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["UP007"]
"squirmy_wormy/cli/*.py" = ["UP007"]
"__init__.py" = ["F401"]
"notebook/*ipynb" = ["D103"]


[tool.mypy]
python_version = "3.11"
pretty = true
ignore_missing_imports = false
strict_optional = true
no_implicit_optional = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_no_return = true
# python_executable = ""

[[tool.mypy.overrides]]
module = ["pandas", "anndata", "scanpy", "scipy", "squidpy"]
ignore_missing_imports = true
